--- a/WPF/SAM.Analytical.UI.WPF/Controls/NCMNameCollectionControl.xaml
+++ b/WPF/SAM.Analytical.UI.WPF/Controls/NCMNameCollectionControl.xaml
@@ -12,7 +12,7 @@
             <ColumnDefinition Width="200"/>
             <ColumnDefinition Width="*"/>
         </Grid.ColumnDefinitions>
-        <ComboBox Grid.Column="0" Margin="5,5,5,0" VerticalAlignment="Top" HorizontalAlignment="Stretch"/>
+        <ComboBox x:Name="ComboBox_Group" Grid.Column="0" Margin="5,5,5,0" VerticalAlignment="Top" HorizontalAlignment="Stretch" SelectionChanged="ComboBox_Group_SelectionChanged"/>
         <ListBox x:Name="ListBox_Main" Grid.Column="0" HorizontalAlignment="Stretch" Margin="5,35,5,5" VerticalAlignment="Stretch" />
         <Label Grid.Column="1" Margin="5,5,5,0" VerticalAlignment="Top" HorizontalAlignment="Stretch" Content="Name"></Label>
         <TextBox x:Name="TextBox_Name" Grid.Column="1" Margin="5,35,5,0" VerticalAlignment="Top" HorizontalAlignment="Stretch"/>
