--- a/WPF/SAM.Analytical.UI.WPF/Controls/NCMDataControl.xaml
+++ b/WPF/SAM.Analytical.UI.WPF/Controls/NCMDataControl.xaml
@@ -1,31 +1,30 @@
-﻿<UserControl x:Class="SAM.Analytical.UI.WPF.NCMDataControl"
+﻿<UserControl
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:SAM.Analytical.UI.WPF"
+             xmlns:WPF="clr-namespace:SAM.Core.UI.WPF;assembly=SAM.Core.UI.WPF" x:Class="SAM.Analytical.UI.WPF.NCMDataControl"
              mc:Ignorable="d" 
-             d:DesignHeight="650" d:DesignWidth="300">
+             d:DesignHeight="600" d:DesignWidth="300">
     <Grid>
         <Label Content="Name"  HorizontalAlignment="Stretch" Margin="0, 5, 0, 0" VerticalAlignment="Top"/>
         <Button x:Name="Button_Name" HorizontalAlignment="Stretch" Margin="5, 35, 5, 0" VerticalAlignment="Top" Height="20" Click="Button_Name_Click"/>
         <Label Content="System Type"  HorizontalAlignment="Stretch" Margin="0, 60, 0, 0" VerticalAlignment="Top"/>
-        <ComboBox HorizontalAlignment="Stretch" Margin="5, 85, 5, 0" VerticalAlignment="Top"/>
+        <ComboBox x:Name="ComboBox_SystemType" HorizontalAlignment="Stretch" Margin="5, 85, 5, 0" VerticalAlignment="Top"/>
         <Label Content="Lighting Occupancy Controls"  HorizontalAlignment="Stretch" Margin="0, 110, 0, 0" VerticalAlignment="Top"/>
-        <ComboBox HorizontalAlignment="Stretch" Margin="5, 140, 5, 0" VerticalAlignment="Top"/>
+        <ComboBox x:Name="ComboBox_LightingOccupancyControls" HorizontalAlignment="Stretch" Margin="5, 140, 5, 0" VerticalAlignment="Top"/>
         <Label Content="Lighting Photoelectric Controls"  HorizontalAlignment="Stretch" Margin="0, 165, 0, 0" VerticalAlignment="Top"/>
-        <ComboBox HorizontalAlignment="Stretch" Margin="5, 195, 5, 0" VerticalAlignment="Top"/>
-        <Label Content="Lighting Photoelectric Controls"  HorizontalAlignment="Stretch" Margin="0, 225, 0, 0" VerticalAlignment="Top"/>
-        <ComboBox HorizontalAlignment="Stretch" Margin="5, 255, 5, 0" VerticalAlignment="Top"/>
-        <CheckBox IsChecked="True" Content="Lighting Photoelectric Back Space Sensor" Margin="5, 295, 5,0" VerticalAlignment="Top" HorizontalAlignment="Stretch"/>
-        <CheckBox IsChecked="True" Content="Lighting Photoelectric Controls Time Switch" Margin="5, 325, 5,0" VerticalAlignment="Top" HorizontalAlignment="Stretch"/>
-        <CheckBox IsChecked="True" Content="Lighting Daylight Factor Method" Margin="5, 355, 5,0" VerticalAlignment="Top" HorizontalAlignment="Stretch"/>
-        <CheckBox IsChecked="True" Content="Is Mains Gas Available" Margin="5, 385, 5,0" VerticalAlignment="Top" HorizontalAlignment="Stretch"/>
-        <Label Content="Lighting Photoelectric Parasitic Power"  HorizontalAlignment="Stretch" Margin="0, 410, 0, 0" VerticalAlignment="Top"/>
-        <TextBox Text="" Margin="5,440,5,0" VerticalAlignment="Top" HorizontalAlignment="Stretch"/>
-        <Label Content="Air Permeability"  HorizontalAlignment="Stretch" Margin="0, 465, 0, 0" VerticalAlignment="Top"/>
-        <TextBox Text="" Margin="5,495,5,0" VerticalAlignment="Top" HorizontalAlignment="Stretch"/>
-        <Label Content="Description"  HorizontalAlignment="Stretch" Margin="0, 525, 0, 0" VerticalAlignment="Top"/>
-        <TextBox Text=""  HorizontalAlignment="Stretch" Margin="5, 555, 5, 5" VerticalAlignment="Stretch"/>
+        <ComboBox x:Name="ComboBox_LightingPhotoelectricControls" HorizontalAlignment="Stretch" Margin="5, 195, 5, 0" VerticalAlignment="Top"/>
+        <CheckBox x:Name="CheckBox_LightingPhotoelectricBackSpaceSensor" IsChecked="{x:Null}" Content="Lighting Photoelectric Back Space Sensor" Margin="5, 245, 5,0" VerticalAlignment="Top" HorizontalAlignment="Stretch"/>
+        <CheckBox x:Name="CheckBox_LightingPhotoelectricControlsTimeSwitch" IsChecked="{x:Null}" Content="Lighting Photoelectric Controls Time Switch" Margin="5, 275, 5,0" VerticalAlignment="Top" HorizontalAlignment="Stretch"/>
+        <CheckBox x:Name="CheckBox_LightingDaylightFactorMethod" IsChecked="{x:Null}" Content="Lighting Daylight Factor Method" Margin="5, 305, 5,0" VerticalAlignment="Top" HorizontalAlignment="Stretch"/>
+        <CheckBox x:Name="CheckBox_IsMainsGasAvailable" IsChecked="{x:Null}" Content="Is Mains Gas Available" Margin="5, 335, 5,0" VerticalAlignment="Top" HorizontalAlignment="Stretch"/>
+        <Label Content="Lighting Photoelectric Parasitic Power"  HorizontalAlignment="Stretch" Margin="0, 360, 0, 0" VerticalAlignment="Top"/>
+        <WPF:MultipleValueTextBoxControl x:Name="MultipleValueTextBoxControl_LightingPhotoelectricParasiticPower" Margin="5,390,5,0" VerticalAlignment="Top" HorizontalAlignment="Stretch"/>
+        <Label Content="Air Permeability"  HorizontalAlignment="Stretch" Margin="0, 415, 0, 0" VerticalAlignment="Top"/>
+        <WPF:MultipleValueTextBoxControl x:Name="MultipleValueTextBoxControl_AirPermeability" Margin="5,445,5,0" VerticalAlignment="Top" HorizontalAlignment="Stretch"/>
+        <Label Content="Description"  HorizontalAlignment="Stretch" Margin="0, 475, 0, 0" VerticalAlignment="Top"/>
+        <WPF:MultipleValueTextBoxControl x:Name="MultipleValueTextBoxControl_Description" HorizontalAlignment="Stretch" Margin="5, 505, 5, 5" VerticalAlignment="Stretch"/>
     </Grid>
 </UserControl>
