--- a/WPF/SAM.Core.UI.WPF/Windows/RelationClusterComplexReferenceWindow.xaml
+++ b/WPF/SAM.Core.UI.WPF/Windows/RelationClusterComplexReferenceWindow.xaml
@@ -18,6 +18,6 @@
         </Grid>
         <local:RelationClusterComplexReferenceControl x:Name="RelationClusterComplexReferenceControl_Main" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Margin="0, 0, 0, 0"/>
         <Button x:Name="Button_Cancel" IsCancel="True" Content="Cancel" Grid.Row="1" Margin="5,5,5,5" Width="70" HorizontalAlignment="Right"></Button>
-        <Button x:Name="Button_OK" Content="OK" Grid.Row="1" Margin="5,5,85,5" HorizontalAlignment="Right" Width="70"/>
+        <Button x:Name="Button_OK" Content="OK" Grid.Row="1" Margin="5,5,85,5" HorizontalAlignment="Right" Width="70" Click="Button_OK_Click"/>
     </Grid>
 </Window>
