--- a/WPF/SAM.Analytical.UI.WPF/Controls/SpaceAppearanceSettingsControl.xaml
+++ b/WPF/SAM.Analytical.UI.WPF/Controls/SpaceAppearanceSettingsControl.xaml
@@ -7,22 +7,28 @@
              mc:Ignorable="d" 
              d:DesignHeight="250" d:DesignWidth="300">
     <Grid>
-        <GroupBox Header="Element" Margin="10,10,0,5" HorizontalAlignment="Left" Width="140">
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="155"/>
+            <ColumnDefinition Width="*"/>
+        </Grid.ColumnDefinitions>
+        <GroupBox Grid.Column="0" Header="Element" Margin="5,5,5,5" HorizontalAlignment="Stretch" VerticalAlignment="Stretch">
             <StackPanel HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Margin="0,10,0.4,-0.2">
-                <RadioButton x:Name="radioButton_Default" Content="Default" Height="25" Click="RadioButton_Click"/>
-                <RadioButton x:Name="radioButton_Space" Content="Space" Height="25" Click="RadioButton_Click"/>
-                <RadioButton x:Name="radioButton_Zone" Content="Zone" Height="25" Click="RadioButton_Click" IsChecked="True"/>
-                <RadioButton x:Name="radioButton_InternalCondition" Content="Internal Condition" Height="25" Click="RadioButton_Click"/>
-                <RadioButton x:Name="radioButton_VentilationSystem" Content="Ventilation System" Height="25" Click="RadioButton_Click"/>
-                <RadioButton x:Name="radioButton_HeatingSystem" Content="Heating System" Height="25" Click="RadioButton_Click"/>
-                <RadioButton x:Name="radioButton_CoolingSystem" Content="Cooling System" Height="25" Click="RadioButton_Click"/>
-                <RadioButton x:Name="radioButton_NCMData" Content="NCM" Height="25" Click="RadioButton_Click"/>
+                <RadioButton x:Name="radioButton_Default" Content="Default" Height="22" Click="RadioButton_Click"/>
+                <RadioButton x:Name="radioButton_Space" Content="Space" Height="22" Click="RadioButton_Click"/>
+                <RadioButton x:Name="radioButton_Zone" Content="Zone" Height="22" Click="RadioButton_Click" IsChecked="True"/>
+                <RadioButton x:Name="radioButton_InternalCondition" Content="Internal Condition" Height="22" Click="RadioButton_Click"/>
+                <RadioButton x:Name="radioButton_VentilationSystem" Content="Ventilation System" Height="22" Click="RadioButton_Click"/>
+                <RadioButton x:Name="radioButton_HeatingSystem" Content="Heating System" Height="22" Click="RadioButton_Click"/>
+                <RadioButton x:Name="radioButton_CoolingSystem" Content="Cooling System" Height="22" Click="RadioButton_Click"/>
+                <RadioButton x:Name="radioButton_NCMData" Content="NCM" Height="22" Click="RadioButton_Click"/>
+                <RadioButton x:Name="radioButton_ComplexRefernce" Content="Reference" Height="22" Click="RadioButton_Click"/>
             </StackPanel>
         </GroupBox>
-        <Label  x:Name="label_ParameterName" Content="Parameter Name:" HorizontalAlignment="Left" Margin="170,20,0,0" VerticalAlignment="Top"/>
-        <ComboBox x:Name="comboBox_ParameterName" Margin="170,48,20,0" VerticalAlignment="Top" SelectionChanged="comboBox_ParameterName_SelectionChanged"/>
-        <Label x:Name="label_ZoneType" Content="Zone Type:" HorizontalAlignment="Left" Margin="170,87,0,0" VerticalAlignment="Top"/>
-        <ComboBox x:Name="comboBox_ZoneCategory" Margin="170,115,20,0" VerticalAlignment="Top" SelectionChanged="comboBox_ZoneCategory_SelectionChanged"/>
+        <Label Grid.Column="1" x:Name="label_ParameterName" Content="Parameter Name:" HorizontalAlignment="Stretch" Margin="5,20,5,0" VerticalAlignment="Top"/>
+        <ComboBox Grid.Column="1" x:Name="comboBox_ParameterName" Margin="5,48,5,0" VerticalAlignment="Top" SelectionChanged="comboBox_ParameterName_SelectionChanged"/>
+        <Label Grid.Column="1" x:Name="label_ZoneType" Content="Zone Type:" HorizontalAlignment="Stretch" Margin="5,87,5,0" VerticalAlignment="Top"/>
+        <ComboBox Grid.Column="1" x:Name="comboBox_ZoneCategory" Margin="5,115,5,0" VerticalAlignment="Top" SelectionChanged="comboBox_ZoneCategory_SelectionChanged"/>
+        <Button Grid.Column="1" x:Name="Button_ComplexReference" Margin="5, 48, 5, 5" VerticalAlignment="Top" HorizontalAlignment="Stretch" Height="22" Click="Button_ComplexReference_Click"/>
 
     </Grid>
 </UserControl>
