--- a/WPF/SAM.Core.UI.WPF/Controls/Filter/TextFilterControl.xaml
+++ b/WPF/SAM.Core.UI.WPF/Controls/Filter/TextFilterControl.xaml
@@ -10,7 +10,7 @@
         <GroupBox x:Name="groupBox_Main" Header="Text" VerticalAlignment="Stretch" HorizontalAlignment="Stretch">
             <Grid>
                 <ComboBox x:Name="comboBox_TextComparisonType" Margin="0,10,150,0" VerticalAlignment="Top" SelectionChanged="comboBox_TextComparisonType_SelectionChanged"/>
-                <TextBox x:Name="textBox_Value" Text="" Margin="0,46,10,9.6" TextChanged="textBox_Value_TextChanged"></TextBox>
+                <ComboBox x:Name="comboBox_Value" Text="" Margin="0,46,10,9.6" IsEditable="True" SelectionChanged="comboBox_Value_SelectionChanged" TextBoxBase.TextChanged="comboBox_Value_TextChanged"/>
                 <CheckBox x:Name="checkBox_Inverted" Content="Invert" HorizontalAlignment="Right" Margin="0,14,5,0" VerticalAlignment="Top" Click="checkBox_Inverted_Click"/>
                 <CheckBox x:Name="checkBox_CaseSensitive" Content="Match case" HorizontalAlignment="Right" Margin="0,14,63,0" VerticalAlignment="Top" Click="checkBox_CaseSensitive_Click"/>
             </Grid>
