--- a/WPF/SAM.Core.UI.WPF/Controls/RelationClusterComplexReferenceControl.xaml
+++ b/WPF/SAM.Core.UI.WPF/Controls/RelationClusterComplexReferenceControl.xaml
@@ -13,7 +13,7 @@
             <RowDefinition Height="50"/>
         </Grid.RowDefinitions>
         <ComboBox x:Name="ComboBox_Type" Grid.Row="0" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Margin="5,5,5,5" SelectionChanged="ComboBox_Type_SelectionChanged"></ComboBox>
-        <TreeView x:Name="TreeView_Property" Grid.Row="1" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Margin="5,0,5,5" SelectedItemChanged="TreeView_Property_SelectedItemChanged"/>
+        <TreeView x:Name="TreeView_Property" Grid.Row="1" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Margin="5,0,5,5" SelectedItemChanged="TreeView_Property_SelectedItemChanged" PreviewMouseDoubleClick="TreeView_Property_PreviewMouseDoubleClick"/>
         <TextBox x:Name="TextBox_Reference" Grid.Row="2" Margin="5,0,5,5" IsReadOnly="True" TextWrapping="WrapWithOverflow"/>
     </Grid>
 </UserControl>
