--- a/WPF/SAM.Analytical.UI.WPF/Windows/AnalyticalWindow.xaml
+++ b/WPF/SAM.Analytical.UI.WPF/Windows/AnalyticalWindow.xaml
@@ -484,8 +484,10 @@
                     <RibbonButton x:Name="RibbonButton_OpenTBD" Label="Open TBD" />
                     <RibbonButton x:Name="RibbonButton_OpenTSD" Label="Open TSD" />
                     <RibbonButton x:Name="RibbonButton_OpenTPD" Label="Open TPD" />
-                    <RibbonButton x:Name="RibbonButton_OpenPartL" Label="Open PartL" />
-                    <RibbonButton x:Name="RibbonButton_UpdateUKBRFile" Label="Update UKBR File" />
+                    <RibbonMenuButton x:Name="RibbonMenuButton_PartL" Label="PartL" >
+                        <RibbonButton x:Name="RibbonButton_OpenPartL" Label="Open PartL" />
+                        <RibbonButton x:Name="RibbonButton_UpdateUKBRFile" Label="Update UKBR File"/>
+                    </RibbonMenuButton>
                     <!-- <RibbonButton x:Name="RibbonButton_CreateTBD" Label="Create TBD" /> -->
                 </RibbonGroup>
                 <RibbonGroup x:Name="RibbonGroup_Tools_Hydra" Header="Hydra">
