Buttons for Part L Renamed and Moved to Simulate Tab

--- a/WPF/SAM.Analytical.UI.WPF/Windows/AnalyticalWindow.xaml
+++ b/WPF/SAM.Analytical.UI.WPF/Windows/AnalyticalWindow.xaml
@@ -464,6 +464,10 @@
                 <RibbonGroup x:Name="RibbonGroup_Simulate_Simulate" Header="Simulate">
                     <RibbonButton x:Name="RibbonButton_SolarSimulation" Label="Solar Simulation" />
                     <RibbonButton x:Name="RibbonButton_EnergySimulation" Label="Energy Simulation" />
+                    <RibbonMenuButton x:Name="RibbonMenuButton_PartL" Label="PartL" >
+                        <RibbonButton x:Name="RibbonButton_OpenPartL" Label="Open Part L" />
+                        <RibbonButton x:Name="RibbonButton_UpdateUKBRFile" Label="Update Lighting"/>
+                    </RibbonMenuButton>
                 </RibbonGroup>
             </RibbonTab>
             <RibbonTab x:Name="RibbonTab_Results" Header="Results">
@@ -484,10 +488,6 @@
                     <RibbonButton x:Name="RibbonButton_OpenTBD" Label="Open TBD" />
                     <RibbonButton x:Name="RibbonButton_OpenTSD" Label="Open TSD" />
                     <RibbonButton x:Name="RibbonButton_OpenTPD" Label="Open TPD" />
-                    <RibbonMenuButton x:Name="RibbonMenuButton_PartL" Label="PartL" >
-                        <RibbonButton x:Name="RibbonButton_OpenPartL" Label="Open PartL" />
-                        <RibbonButton x:Name="RibbonButton_UpdateUKBRFile" Label="Update UKBR File"/>
-                    </RibbonMenuButton>
                     <!-- <RibbonButton x:Name="RibbonButton_CreateTBD" Label="Create TBD" /> -->
                 </RibbonGroup>
                 <RibbonGroup x:Name="RibbonGroup_Tools_Hydra" Header="Hydra">
