--- a/WPF/SAM.Analytical.UI.WPF/Controls/BatchCreateViewsControl.xaml
+++ b/WPF/SAM.Analytical.UI.WPF/Controls/BatchCreateViewsControl.xaml
@@ -14,9 +14,18 @@
                 <CheckBox x:Name="checkBox_Visibilty_Aperture" Content="Aperture" HorizontalAlignment="Left" Margin="10,10,0,0" VerticalAlignment="Top"/>
             </StackPanel>
         </GroupBox>
-        <GroupBox x:Name="groupBox_ColorScheme"  Header="Color Scheme" HorizontalAlignment="Stretch" Margin="10,245,5,5" VerticalAlignment="Stretch">
-            <local:SpaceAppearanceSettingsControl x:Name="spaceAppearanceSettingsControl" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Margin="0,0,0,0"/>
+
+        <GroupBox  Height="100" Margin="237,120,10.4,0" VerticalAlignment="Top" Width="120">
+            <GroupBox.Header>
+                <CheckBox x:Name="checkBox_TextVisibility" Content="Text"/>
+            </GroupBox.Header>
+            <Grid>
+                <Label Content="Font Size:" VerticalAlignment="Top" HorizontalAlignment="Left" Margin="10,10,0,0"/>
+                <TextBox x:Name="textBox_TextSize" HorizontalAlignment="Left" Height="20" Margin="10,40,0,0" TextWrapping="NoWrap" Text="1" VerticalAlignment="Top" Width="76" TextInput="textBox_TextSize_TextInput"/>
+            </Grid>
         </GroupBox>
+        <GroupBox x:Name="groupBox_ColorScheme"  Header="Color Scheme" HorizontalAlignment="Stretch" Margin="10,245,10.4,5" VerticalAlignment="Stretch">
+            <local:SpaceAppearanceSettingsControl x:Name="spaceAppearanceSettingsControl" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Width="301" Margin="5,5,5,5"/>       </GroupBox>
         <ListBox x:Name="listBox_Levels" HorizontalAlignment="Left" Height="157" Margin="10,35,0,0" VerticalAlignment="Top" Width="217" SelectionMode="Multiple"/>
         <Label Content="Levels:" HorizontalAlignment="Left" Margin="10,6,0,0" VerticalAlignment="Top"/>
         <TextBox x:Name="textBox_Offset" HorizontalAlignment="Left" Height="23" Margin="107,197,0,0" TextWrapping="Wrap" Text="0.1" VerticalAlignment="Top" Width="120"/>
