--- a/WPF/SAM.Core.UI.WPF/Windows/MultipleSelectionTreeViewWindow.xaml
+++ b/WPF/SAM.Core.UI.WPF/Windows/MultipleSelectionTreeViewWindow.xaml
@@ -1,4 +1,4 @@
-﻿<Window x:Class="SAM.Core.UI.WPF.TreeViewWindow"
+﻿<Window x:Class="SAM.Core.UI.WPF.MultipleSelectionTreeViewWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -11,7 +11,7 @@
             <RowDefinition Height="*"/>
             <RowDefinition Height="30"/>
         </Grid.RowDefinitions>
-        <local:TreeViewControl x:Name="TreeViewControl_Main"/>
+        <local:MultipleSelectionTreeViewControl x:Name="MultipleSelectionTreeViewControl_Main"/>
         <Button x:Name="Button_Cancel" Grid.Row="1" HorizontalAlignment="Right" VerticalAlignment="Center" Width="70" Content="Cancel" Margin="0,0,5,0" IsCancel="True" Click="Button_Cancel_Click"></Button>
         <Button x:Name="Button_OK" Grid.Row="1" HorizontalAlignment="Right" VerticalAlignment="Center" Width="70" Content="OK"  Margin="0,0,85,0" Click="Button_OK_Click"/>
     </Grid>
