--- a/WPF/SAM.Analytical.UI.WPF/Windows/AnalyticalWindow.xaml
+++ b/WPF/SAM.Analytical.UI.WPF/Windows/AnalyticalWindow.xaml
@@ -485,6 +485,7 @@
                     <RibbonButton x:Name="RibbonButton_OpenTSD" Label="Open TSD" />
                     <RibbonButton x:Name="RibbonButton_OpenTPD" Label="Open TPD" />
                     <RibbonButton x:Name="RibbonButton_ThermalTransmittanceCalculator" Label="U Value Calculator" />
+                    <RibbonButton x:Name="RibbonButton_GlazingCalculator" Label="Glazing Calculator" />
 
                     <RibbonMenuButton x:Name="RibbonMenuButton_PartL" Label="PartL" >
                         <RibbonButton x:Name="RibbonButton_OpenPartL" Label="Open PartL" />
