--- a/WPF/SAM.Analytical.UI.WPF/Controls/GlazingCalculationResultControl.xaml
+++ b/WPF/SAM.Analytical.UI.WPF/Controls/GlazingCalculationResultControl.xaml
@@ -14,27 +14,27 @@
         </Grid.RowDefinitions>
         <DataGrid x:Name="DataGrid_Current" Grid.Row="0" Margin="5,5,5,5" AutoGenerateColumns="False">
             <DataGrid.Columns>
-                <DataGridTextColumn Header="Construction Name" Binding="{Binding ConstructionName}" Visibility="Visible" Width="50*"/>
-                <DataGridTextColumn Header="Description" Binding="{Binding Description}" Visibility="Visible" Width="50*"/>
-                <DataGridTextColumn Header="g Value" Binding="{Binding TotalSolarEnergyTransmittance}" Visibility="Visible"/>
-                <DataGridTextColumn Header="Lt Value" Binding="{Binding LightTransmittance}" Visibility="Visible"/>
-                <DataGridTextColumn Header="U Value" Binding="{Binding ThermalTransmittance}" Visibility="Visible"/>
-                <DataGridTextColumn Header="Thickness" Binding="{Binding Thickness}" Visibility="Visible"/>
-                <DataGridTextColumn Header="Type" Binding="{Binding TypeName}" Visibility="Visible" Width="100"/>
-                <DataGridTextColumn Header="Criteria" Binding="{Binding Criteria}" Visibility="Hidden"/>
+                <DataGridTextColumn Header="Construction Name" Binding="{Binding ConstructionName}" Visibility="Visible" IsReadOnly="True" Width="50*"/>
+                <DataGridTextColumn Header="Description" Binding="{Binding Description}" Visibility="Visible" IsReadOnly="True" Width="50*"/>
+                <DataGridTextColumn Header="g Value" Binding="{Binding TotalSolarEnergyTransmittance}" IsReadOnly="True" Visibility="Visible"/>
+                <DataGridTextColumn Header="Lt Value" Binding="{Binding LightTransmittance}" IsReadOnly="True" Visibility="Visible"/>
+                <DataGridTextColumn Header="U Value" Binding="{Binding ThermalTransmittance}" IsReadOnly="True" Visibility="Visible"/>
+                <DataGridTextColumn Header="Thickness" Binding="{Binding Thickness}" IsReadOnly="True" Visibility="Visible"/>
+                <DataGridTextColumn Header="Type" Binding="{Binding TypeName}" IsReadOnly="True" Visibility="Visible" Width="100"/>
+                <DataGridTextColumn Header="Criteria" Binding="{Binding Criteria}" IsReadOnly="True" Visibility="Hidden"/>
             </DataGrid.Columns>
         </DataGrid>
         <DataGrid x:Name="DataGrid_Main" Grid.Row="1" Margin="5,5,5,5" AutoGenerateColumns="False">
             <DataGrid.Columns>
-                <DataGridTextColumn Header="Index" Binding="{Binding Index}" Visibility="Visible" />
-                <DataGridTextColumn Header="Construction Name" Binding="{Binding ConstructionName}" Visibility="Visible" Width="50*"/>
-                <DataGridTextColumn Header="Description" Binding="{Binding Description}" Visibility="Visible" Width="50*"/>
-                <DataGridTextColumn Header="g Value" Binding="{Binding TotalSolarEnergyTransmittance}" Visibility="Visible"/>
-                <DataGridTextColumn Header="Lt Value" Binding="{Binding LightTransmittance}" Visibility="Visible"/>
-                <DataGridTextColumn Header="U Value" Binding="{Binding ThermalTransmittance}" Visibility="Visible"/>
-                <DataGridTextColumn Header="Thickness" Binding="{Binding Thickness}" Visibility="Visible"/>
-                <DataGridTextColumn Header="Type" Binding="{Binding TypeName}" Visibility="Visible" Width="100"/>
-                <DataGridTextColumn Header="Criteria" Binding="{Binding Criteria}" Visibility="Hidden"/>
+                <DataGridTextColumn Header="Index" Binding="{Binding Index}" IsReadOnly="True" Visibility="Visible"/>
+                <DataGridTextColumn Header="Construction Name" Binding="{Binding ConstructionName}" IsReadOnly="True" Visibility="Visible" Width="50*"/>
+                <DataGridTextColumn Header="Description" Binding="{Binding Description}" IsReadOnly="True" Visibility="Visible" Width="50*"/>
+                <DataGridTextColumn Header="g Value" Binding="{Binding TotalSolarEnergyTransmittance}" IsReadOnly="True" Visibility="Visible"/>
+                <DataGridTextColumn Header="Lt Value" Binding="{Binding LightTransmittance}" IsReadOnly="True" Visibility="Visible"/>
+                <DataGridTextColumn Header="U Value" Binding="{Binding ThermalTransmittance}" IsReadOnly="True" Visibility="Visible"/>
+                <DataGridTextColumn Header="Thickness" Binding="{Binding Thickness}" IsReadOnly="True" Visibility="Visible"/>
+                <DataGridTextColumn Header="Type" Binding="{Binding TypeName}" IsReadOnly="True" Visibility="Visible" Width="100"/>
+                <DataGridTextColumn Header="Criteria" Binding="{Binding Criteria}" IsReadOnly="True" Visibility="Hidden"/>
             </DataGrid.Columns>
             <DataGrid.RowStyle>
                 <Style TargetType="DataGridRow">
