--- a/WPF/SAM.Analytical.UI.WPF/Windows/CreateCaseByWindowSizeWindow.xaml
+++ b/WPF/SAM.Analytical.UI.WPF/Windows/CreateCaseByWindowSizeWindow.xaml
@@ -5,13 +5,13 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:SAM.Analytical.UI.WPF"
         mc:Ignorable="d"
-        Title="Create Case By Window Size" Height="130" Width="350" ResizeMode="NoResize" ShowInTaskbar="True">
+        Title="Create Case By Window Size" Height="300" Width="300" ResizeMode="NoResize" ShowInTaskbar="True">
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="*"></RowDefinition>
             <RowDefinition Height="40"></RowDefinition>
         </Grid.RowDefinitions>
-        <local:CreateCaseByWindowSizeUserControl x:Name="CreateCaseByWindowSizeUserControl_Main" Grid.Row="0" Margin="0,0,0,0"></local:CreateCaseByWindowSizeUserControl>
+        <local:CreateCaseByWindowSizeControl x:Name="CreateCaseByWindowSizeControl_Main" Grid.Row="0" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Margin="0,0,0,0"/>
         <Button x:Name="button_Cancel" IsCancel="True" Content="Cancel" Grid.Row="1" Margin="0,10,10,10" Width="70" Click="button_Cancel_Click" HorizontalAlignment="Right"></Button>
         <Button x:Name="button_OK" Content="OK" Grid.Row="1" Margin="0,10,85,10" Click="button_OK_Click" HorizontalAlignment="Right" Width="70" />
     </Grid>
