--- a/WPF/SAM.Analytical.UI.WPF/Windows/AnalyticalWindow.xaml
+++ b/WPF/SAM.Analytical.UI.WPF/Windows/AnalyticalWindow.xaml
@@ -503,6 +503,7 @@
                     <RibbonButton x:Name="RibbonButton_TextMap" Label="Text Map" />
                     <RibbonButton x:Name="RibbonButton_NCMNames" Label="NCM Names" />
                     <RibbonButton x:Name="RibbonButton_CreateCases" Label="Create Cases" />
+                    <RibbonButton x:Name="RibbonButton_SimulateCases" Label="Simulate Cases" />
                 </RibbonGroup>
                 <RibbonGroup x:Name="RibbonGroup_Tools_Developer" Header="Developer">
                     <RibbonButton x:Name="RibbonButton_Test" Label="Test" />
