--- a/WPF/SAM.Analytical.UI.WPF/Controls/CreateCaseByWindowSizeControl.xaml
+++ b/WPF/SAM.Analytical.UI.WPF/Controls/CreateCaseByWindowSizeControl.xaml
@@ -7,13 +7,18 @@
              mc:Ignorable="d" 
              d:DesignHeight="300" d:DesignWidth="200">
     <Grid>
-        <DataGrid ItemsSource="{Binding Items}" AutoGenerateColumns="False" CanUserAddRows="True" CanUserDeleteRows="True" HeadersVisibility="Column">
+        <Grid.RowDefinitions>
+            <RowDefinition Height="*"/>
+            <RowDefinition Height="40"/>
+        </Grid.RowDefinitions>
 
+        <DataGrid Grid.Row="0" ItemsSource="{Binding Items}" AutoGenerateColumns="False" CanUserAddRows="True" CanUserDeleteRows="True" HeadersVisibility="Column">
             <DataGrid.Columns>
                 <DataGridTextColumn Header="Aperture scale factor" Binding="{Binding ApertureScaleFactor, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged, StringFormat=N2}" Width="*" />
             </DataGrid.Columns>
-            
         </DataGrid>
+
+        <Button Grid.Row="1" x:Name="button_Selection" Content="Selection"  Margin="0,10,10,10" HorizontalAlignment="Right" Width="70" Click="button_Selection_Click" IsEnabled="False"/>
 
     </Grid>
 </UserControl>
