--- a/WPF/SAM.Analytical.UI.WPF/Controls/CreateCaseByApertureConstructionControl.xaml
+++ b/WPF/SAM.Analytical.UI.WPF/Controls/CreateCaseByApertureConstructionControl.xaml
@@ -7,8 +7,17 @@
              mc:Ignorable="d" 
              d:DesignHeight="250" d:DesignWidth="200">
     <Grid>
-        <ScrollViewer VerticalScrollBarVisibility="Auto">
+
+        <Grid.RowDefinitions>
+            <RowDefinition Height="*"/>
+            <RowDefinition Height="40"/>
+        </Grid.RowDefinitions>
+
+        <ScrollViewer Grid.Row="0" VerticalScrollBarVisibility="Auto">
             <StackPanel x:Name="StackPanel_Main" Orientation="Vertical" Margin="10"/>
         </ScrollViewer>
+
+        <Button Grid.Row="1" x:Name="button_Selection" Content="Selection"  Margin="0,10,10,10" HorizontalAlignment="Right" Width="70" Click="button_Selection_Click" IsEnabled="True"/>
+
     </Grid>
 </UserControl>
