--- a/WPF/SAM.Analytical.UI.WPF/Controls/CreateCasesControl.xaml
+++ b/WPF/SAM.Analytical.UI.WPF/Controls/CreateCasesControl.xaml
@@ -32,6 +32,7 @@
             </Grid.RowDefinitions>
             <StackPanel Orientation="Vertical" Grid.Row="0" VerticalAlignment="Top">
                 <Button x:Name="Button_CaseByWindowSize" Content="Add window size case" HorizontalAlignment="Stretch" VerticalAlignment="Center" Margin="5,5,5,5" Click="Button_CaseByWindowSize_Click"/>
+                <Button x:Name="Button_CaseByAperture" Content="Add aperture case" HorizontalAlignment="Stretch" VerticalAlignment="Center" Margin="5,5,5,5" Click="Button_CaseByAperture_Click" IsEnabled="False"/>
                 <Button x:Name="Button_CaseByApertureConstruction" Content="Add aperture construction case" HorizontalAlignment="Stretch" VerticalAlignment="Center" Margin="5,5,5,5" Click="Button_CaseByApertureConstruction_Click"/>
                 <Button x:Name="Button_CaseByWeatherData" Content="Add weather data case" HorizontalAlignment="Stretch" VerticalAlignment="Center" Margin="5,5,5,5" Click="Button_CaseByWeatherData_Click"/>
                 <Button x:Name="Button_CaseByFinShade" Content="Add shade case" HorizontalAlignment="Stretch" VerticalAlignment="Center" Margin="5,5,5,5" Click="Button_CaseByFinShade_Click" IsEnabled="True"/>
